# encrypt_notepad

flutter_ui/: pubspec.yaml  requirements.txt
flutter_ui/android/app/: build.gradle.kts
flutter_ui/android/app/src/main/: AndroidManifest.xml
flutter_ui/lib/: api_interface.dart  bridge.txt  bridge_generated.dart  main.dart
flutter_ui/lib/ui/screens/: editor_screen.dart  home_screen.dart
flutter_ui/notes/: hello world.txt  hello.txt  whatsup.txt
flutter_ui/test/: widget_test.dart
notepad/: pubspec.yaml
notepad/android/app/: build.gradle.kts
notepad/android/app/src/main/: AndroidManifest.xml
notepad/integration_test/: simple_test.dart
notepad/ios/Runner.xcodeproj/: project.pbxproj
notepad/lib/: api_interface.dart  main.dart
notepad/lib/bridge_generated.dart/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
notepad/lib/src/rust/: frb_generated.dart
notepad/lib/ui/screens/: editor_screen.dart  home_screen.dart
notepad/lib/ui/widgets/: dismissible_action.dart
notepad/native/: Cargo.toml
notepad/native/.cargo/: config.toml
notepad/native/src/: api.rs  frb_generated.rs  lib.rs  rust-toolchain.toml
notepad/rust_builder/: pubspec.yaml
notepad/rust_builder/android/: build.gradle  settings.gradle
notepad/rust_builder/ios/: rust_lib_notepad.podspec
notepad/rust_builder/linux/: CMakeLists.txt
notepad/rust_builder/macos/: rust_lib_notepad.podspec
notepad/rust_builder/windows/: CMakeLists.txt
rust/: Cargo.toml  requirements.txt
rust/src/: api.rs  frb_generated.rs
(+6 files in other folders)
